# battle-sim

./: .gitignore  CMakeLists.txt  README.md
driver/: .gitignore  Makefile  battlefield.config  battlesim.i  battlesimwrap.py  build.sh  callgrind.out.14355  draw.py  driver.py  game  simulator  soldier.config
include/: battle_field.hpp  battle_field.hpp.orig  cellular_automata.hpp  datatypes.hpp  distributed_matrix.hpp  floor_field.hpp  matrix.hpp  mpi_cellular_automata.hpp  par_battle_field.hpp  soldier.hpp
src/: CMakeLists.txt  game_of_life.cpp  main.cpp  parmain.cpp  stats.cpp  test_distributed.cpp
test/: CMakeLists.txt  gtest_main.cpp  test_matrix.cpp
